--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -133,33 +133,33 @@
             </div>
         </div>
     </section>
-
-    <div class="conocimientos">
-        <div class="card">
-            <div class="card-body">
-                <section class="trabajos">
-                    <div class="contenedor">
-                        <h3 class="titulo text-dark text-light-dark">Habilidades Técnicas</h3>
-                        <div class="skill-container">
-                            <div class="skill"><i class="fab fa-php"></i><p>PHP</p></div>
-                            <div class="skill"><i class="fab fa-js"></i><p>JavaScript</p></div>
-                            <div class="skill"><i class="fab fa-python"></i><p>Python</p></div>
-                            <div class="skill"><i class="fab fa-laravel"></i><p>Laravel</p></div>
-                            <div class="skill"><i class="fas fa-database"></i><p>MySQL</p></div>
-                            <div class="skill"><i class="fab fa-git"></i><p>Git</p></div>
-                            <div class="skill"><i class="fab fa-html5"></i><p>HTML5</p></div>
-                            <div class="skill"><i class="fab fa-css3-alt"></i><p>CSS</p></div>
-                            <div class="skill"><i class="fab fa-bootstrap"></i><p>Bootstrap</p></div>
-                            <div class="skill"><i class="fas fa-database"></i><p>PostgreSQL</p></div>
-                            <div class="skill"><i class="fas fa-tasks"></i><p>Metodología Scrum</p></div>
-                            <div class="skill"><i class="fab fa-microsoft"></i><p>Microsoft Office</p></div>
+    <section>
+        <div class="conocimientos">
+            <div class="card">
+                <div class="card-body">
+                    <section class="trabajos">
+                        <div class="contenedor">
+                            <h3 class="titulo text-dark text-light-dark">Habilidades Técnicas</h3>
+                            <div class="skill-container">
+                                <div class="skill"><i class="fab fa-php"></i><p>PHP</p></div>
+                                <div class="skill"><i class="fab fa-js"></i><p>JavaScript</p></div>
+                                <div class="skill"><i class="fab fa-python"></i><p>Python</p></div>
+                                <div class="skill"><i class="fab fa-laravel"></i><p>Laravel</p></div>
+                                <div class="skill"><i class="fas fa-database"></i><p>MySQL</p></div>
+                                <div class="skill"><i class="fab fa-git"></i><p>Git</p></div>
+                                <div class="skill"><i class="fab fa-html5"></i><p>HTML5</p></div>
+                                <div class="skill"><i class="fab fa-css3-alt"></i><p>CSS</p></div>
+                                <div class="skill"><i class="fab fa-bootstrap"></i><p>Bootstrap</p></div>
+                                <div class="skill"><i class="fas fa-database"></i><p>PostgreSQL</p></div>
+                                <div class="skill"><i class="fas fa-tasks"></i><p>Metodología Scrum</p></div>
+                                <div class="skill"><i class="fab fa-microsoft"></i><p>Microsoft Office</p></div>
+                            </div>
                         </div>
-                    </div>
-                </section>
+                    </section>
+                </div>
             </div>
         </div>
-    </div>
-
+    </section>
     <div class="mt-5"></div>
 
     <!-- PROYECTOS RECICLADOS -->
@@ -295,7 +295,7 @@
 
                         <div class="timeline-wrapper">
                             <div class="timeline-yr">
-                                <span>2015</span>
+                                <span>2024</span>
                             </div>
                             <div class="timeline-info">
                                 <h3><span>Python Orientado al Análisis de Datos Power BI</span><small>Data Science Analysis</small></h3>
