Nuevo curso realizado

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -303,6 +303,16 @@
                                     visualización efectiva de datos. Se cubren temas como análisis de tendencias y patrones en conjuntos de datos.</p>
                             </div>
                         </div>
+                        <div class="timeline-wrapper">
+                            <div class="timeline-yr">
+                                <span>2024</span>
+                            </div>
+                            <div class="timeline-info">
+                                <h3><span>Curso de JavaScript Desde Cero</span><small>Digital Domain SAC</small></h3>
+                                <p>Curso centrado en el desarrollo web con JavaScript, abarcando tanto frontend como backend con Node.js. 
+                                    Incluye el manejo de Git para control de versiones y el despliegue de aplicaciones web.</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 
