--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -204,6 +204,7 @@
                             <span class="btn btn btn-secondary btn-sm">Diseño UX/UI</span>
                             <br><br>
                             <a href="https://github.com/Ericson-1412/PAGINA_EDUCATIVA" class="btn custom-btn custom-btn-bg custom-btn-link" target="_blank">Ir al Repositorio</a>
+                            <a href="https://ericson-1412.github.io/paginaeducativa.github.io/" class="btn custom-btn custom-btn-bg custom-btn-link" target="_blank">Demo</a>
                         </div>
                     </div>
                 </div>
